# napari-sairyscan

./: LICENSE  README.md  setup.cfg  tox.ini
.napari/: DESCRIPTION.md
src/napari_sairyscan/: __init__.py  _dict_widget.py  _enhancing_widget.py  _gui.py  _ifed.py  _ifed_denoising.py  _isfed.py  _isfed_denoising.py  _ism.py  _pipelines.py  _pseudo_confocal.py  _psf_widget.py  _reader.py  _registration_widget.py  _sample_data.py  _spitfire_join_deconv.py  _splugin.py  _widget.py  napari.yaml
src/napari_sairyscan/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
